fixed issue with map overflow

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
 
 .content-contain {
   height: 95vh;
+  min-height: 650px;
 }
 
 .text {
